made changes to all my files

--- a/contact.html
+++ b/contact.html
@@ -25,6 +25,7 @@
             <li><a class="list" href="contact.html">Contact</a></li>     
         </ul>
         <ul class="sidebar">
+            <img src="image/bono-high-resolution-logo-black-transparent-3.png" alt="logo">
             <li><a class="list2" href="index.html">Home</a></li>
             <li><a class="list2" href="products.html">Products</a></li>
             <li><a class="list2" href="contact.html">Contact</a></li>     
@@ -44,15 +45,15 @@
             <p class = "text">How Can We Help?</p>
             <form action = "#">
                 <div class = "inputform">
-                    <input type = "text" name="name" class ="name" placeholder="Enter Your Name" required>  
+                    <input type = "text" id="name" name="name" class ="name" placeholder="Enter Your Name" required>  
                 </div>
                 <div class = "inputform">
-                    <input type = "text" name="email" class ="email" placeholder="Enter Your Email" required>
+                    <input type = "text" id="email" name="email" class ="email" placeholder="Enter Your Email" required>
                 </div>         
                 <div class = "inputform">
                     <textarea  id="message" class="message" name ="message" placeholder="Enter Your Message..." required></textarea>
                 </div>
-                <button class="btn">Submit</button>
+                <button type="submit" class="btn">Submit</button>
               
             </form>
         </div>
