--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
             <li><a class="list" href="contact.html">Contact</a></li>     
         </ul>
         <ul class="sidebar">
+            <img src="image/bono-high-resolution-logo-black-transparent-3.png" alt="logo">
             <li><a class="list2" href="index.html">Home</a></li>
             <li><a class="list2" href="products.html">Products</a></li>
             <li><a class="list2" href="contact.html">Contact</a></li>     
@@ -38,7 +39,6 @@
         </form>
 
         <div class="nav-icon">
-            <a onclick=showSearchBox() href="#"><i class="fa fa-fw fa-search"></i></a>
             <a onclick=showSideBar() class="nav_bars" href="#"><i class="fa-solid fa-bars"></i></a>
         </div>
 
@@ -46,7 +46,7 @@
 
 <section class="main-home">
     <div class="main-text">
-        <h5>Urban Collections</h5>
+        <h5>BONO Collections</h5>
         <h1>New Collections</h1>
         <p>Step up your style game</p>
 
@@ -198,11 +198,11 @@
             <img src="/image/bono-high-resolution-logo-black-transparent-3.png" alt="Logo-footer">
             <p>BONO@Gmail.com</p>
             <div class="social-icons">
-                <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
-                <a href="#"><i class="fa-brands fa-twitter"></i></a>
-                <a href="#"><i class="fa-brands fa-instagram"></i></a>
-                <a href="#"><i class="fa-brands fa-github"></i></a>
-                <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
+                <a href="https://www.facebook.com/"><i class="fa-brands fa-facebook-f"></i></a>
+                <a href="https://twitter.com/?lang=en"><i class="fa-brands fa-twitter"></i></a>
+                <a href="https://www.instagram.com/"><i class="fa-brands fa-instagram"></i></a>
+                <a href="https://github.com/"><i class="fa-brands fa-github"></i></a>
+                <a href="https://www.linkedin.com/home"><i class="fa-brands fa-linkedin-in"></i></a>
             </div>
         </div>
 
