--- a/products.html
+++ b/products.html
@@ -28,6 +28,7 @@
             <li><a class="list" href="contact.html">Contact</a></li>     
         </ul>
         <ul class="sidebar">
+            <img src="image/bono-high-resolution-logo-black-transparent-3.png" alt="logo">
             <li><a class="list2" href="index.html">Home</a></li>
             <li><a class="list2" href="products.html">Products</a></li>
             <li><a class="list2" href="contact.html">Contact</a></li>     
@@ -64,11 +65,11 @@
                 <img src="image/bono-high-resolution-logo-black-transparent-3.png" alt="BONO Logo">
                 <p>BONO@Gmail.com</p>
                 <div class="social-icons">
-                    <a href="your-facebook-url" aria-label="Facebook"><i class="fa-brands fa-facebook-f"></i></a>
-                    <a href="your-twitter-url" aria-label="Twitter"><i class="fa-brands fa-twitter"></i></a>
-                    <a href="your-instagram-url" aria-label="Instagram"><i class="fa-brands fa-instagram"></i></a>
-                    <a href="your-github-url" aria-label="GitHub"><i class="fa-brands fa-github"></i></a>
-                    <a href="your-linkedin-url" aria-label="LinkedIn"><i class="fa-brands fa-linkedin-in"></i></a>
+                    <a href="https://www.facebook.com/" aria-label="Facebook"><i class="fa-brands fa-facebook-f"></i></a>
+                    <a href="https://twitter.com/?lang=en" aria-label="Twitter"><i class="fa-brands fa-twitter"></i></a>
+                    <a href="https://www.instagram.com/" aria-label="Instagram"><i class="fa-brands fa-instagram"></i></a>
+                    <a href="https://github.com/" aria-label="GitHub"><i class="fa-brands fa-github"></i></a>
+                    <a href="https://www.linkedin.com/home" aria-label="LinkedIn"><i class="fa-brands fa-linkedin-in"></i></a>
                     
                 </div>
             </div>
