changed validations for website

--- a/contact.html
+++ b/contact.html
@@ -48,7 +48,7 @@
                     <input type = "text" id="name" name="name" class ="name" placeholder="Enter Your Name" required>  
                 </div>
                 <div class = "inputform">
-                    <input type = "text" id="email" name="email" class ="email" placeholder="Enter Your Email" required>
+                    <input type = "email" id="email" name="email" class ="email" placeholder="Enter Your Email" required>
                 </div>         
                 <div class = "inputform">
                     <textarea  id="message" class="message" name ="message" placeholder="Enter Your Message..." required></textarea>
