change the icon for contact bar

--- a/contact.html
+++ b/contact.html
@@ -33,7 +33,7 @@
     
 
     <div class="nav-icon">
-        <a onclick=showSideBar() href="#"><i class="fa-solid fa-bars"></i></a>
+        <a class="nav_bar" onclick=showSideBar() href="#"><i class="fa-solid fa-bars"></i></a>
       </div>
 
     </nav>
