made changes to validation, homepage arrow etc

--- a/contact.html
+++ b/contact.html
@@ -25,7 +25,7 @@
             <li><a class="list" href="contact.html">Contact</a></li>     
         </ul>
         <ul class="sidebar">
-            <img src="image/bono-high-resolution-logo-black-transparent-3.png" alt="logo">
+            <li><img src="image/bono-high-resolution-logo-black-transparent-3.png" alt="logo"></li>
             <li><a class="list2" href="index.html">Home</a></li>
             <li><a class="list2" href="products.html">Products</a></li>
             <li><a class="list2" href="contact.html">Contact</a></li>     
@@ -33,7 +33,7 @@
     
 
     <div class="nav-icon">
-        <a class="nav_bar" onclick=showSideBar() href="#"><i class="fa-solid fa-bars"></i></a>
+        <a class="nav_bar" onclick=showSideBar() href="#"><i class="fa-solid fa-bars"></i><span class="visually-hidden">Menu</span> </a>
       </div>
 
     </nav>
@@ -70,11 +70,11 @@
             </div>
         </div>
         <div class="form-icons">
-            <a class = "book" href="https://www.facebook.com"><i class="fa-brands fa-facebook-f"></i></a>
-                    <a class ="twit" href="https://twitter.com"><i class="fa-brands fa-twitter"></i></a>
-                    <a class = "gram" href="https://www.instagram.com"><i class="fa-brands fa-instagram"></i></a>
-                    <a class = "git" href="https://github.com"><i class="fa-brands fa-github"></i></a>
-                    <a class = "linked" href="https://www.linkedin.com"><i class="fa-brands fa-linkedin-in"></i></a>
+            <a class="book" href="https://www.facebook.com"><i class="fa-brands fa-facebook-f"></i><span class="visually-hidden">Facebook</span></a>
+            <a class="twit" href="https://twitter.com"><i class="fa-brands fa-twitter"></i><span class="visually-hidden">Twitter</span></a>
+            <a class="gram" href="https://www.instagram.com"><i class="fa-brands fa-instagram"></i><span class="visually-hidden">Instagram</span></a>
+            <a class="git" href="https://github.com"><i class="fa-brands fa-github"></i><span class="visually-hidden">GitHub</span></a>
+            <a class="linked" href="https://www.linkedin.com"><i class="fa-brands fa-linkedin-in"></i><span class="visually-hidden">LinkedIn</span></a>
         </div>
     </div>
 
