--- a/products.html
+++ b/products.html
@@ -28,7 +28,7 @@
             <li><a class="list" href="contact.html">Contact</a></li>     
         </ul>
         <ul class="sidebar">
-            <img src="image/bono-high-resolution-logo-black-transparent-3.png" alt="logo">
+            <li><img src="image/bono-high-resolution-logo-black-transparent-3.png" alt="logo"></li>
             <li><a class="list2" href="index.html">Home</a></li>
             <li><a class="list2" href="products.html">Products</a></li>
             <li><a class="list2" href="contact.html">Contact</a></li>     
@@ -76,7 +76,7 @@
     
             <div class="second-info">
                 <a href="#" target="_blank"><h4>Support</h4></a>
-                <a href="#" target="_blank"><p>Contact Us</p></a>
+                <a href="contact.html" target="_blank"><p>Contact Us</p></a>
             </div>
         </div>
     </footer>
