added new functions on my website

--- a/contact.html
+++ b/contact.html
@@ -77,17 +77,28 @@
             <a class="linked" href="https://www.linkedin.com"><i class="fa-brands fa-linkedin-in"></i><span class="visually-hidden">LinkedIn</span></a>
         </div>
     </div>
-
-
-
-
-
-
-
-
-
-
-
+   
+    <footer class="foot">
+        <div class="foot-bar">
+            <div class="first-info">
+                <img src="image/bono-high-resolution-logo-black-transparent-3.png" alt="BONO Logo">
+                <p>BONO@Gmail.com</p>
+                <div class="social-icons">
+                    <a href="https://www.facebook.com/" aria-label="Facebook"><i class="fa-brands fa-facebook-f"></i></a>
+                    <a href="https://twitter.com/?lang=en" aria-label="Twitter"><i class="fa-brands fa-twitter"></i></a>
+                    <a href="https://www.instagram.com/" aria-label="Instagram"><i class="fa-brands fa-instagram"></i></a>
+                    <a href="https://github.com/" aria-label="GitHub"><i class="fa-brands fa-github"></i></a>
+                    <a href="https://www.linkedin.com/home" aria-label="LinkedIn"><i class="fa-brands fa-linkedin-in"></i></a>
+                    
+                </div>
+            </div>
+    
+            <div class="second-info">
+                <a href="#" target="_blank"><h4>Support</h4></a>
+                <a href="contact.html" target="_blank"><p>Contact Us</p></a>
+            </div>
+        </div>
+    </footer>
     <script src="contact.js"></script>
 </body>
 </html>
